cluster/cloudnative-pg/cluster/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: cnpg-cluster
  namespace: cnpg-system
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - postgres
  tls:
    passthrough: true
  routes:
    - match: HostSNI(`cnpg.local.cvsickle.com`)
      services:
        - name: cnpg-cluster-rw
          port: 5432
